QAFE-1201 [TB:S] SPIKE: As a QAFE ISV I want to see if MDI can stretch like the new SDI Mode such that visually the application is using all the space possible - small css fix for paging buttons

--- a/qafe-web-gwt/src/main/webapp/css/qafe.less
+++ b/qafe-web-gwt/src/main/webapp/css/qafe.less
@@ -1744,6 +1744,10 @@ table.gwt-DecoratedPanel .gwt-ScrollTable {
   width: 100% !important;
 }
 
+table.gwt-DecoratedPanel table.gwt-PagingOptions {
+  width: auto !important;
+}
+
 table.gwt-DecoratedPanel > div,
 table.gwt-DecoratedPanel > table {
   overflow: hidden !important;
